[gd_scene load_steps=14 format=3 uid="uid://dm5c4r2rdnmcv"]

[ext_resource type="Script" path="res://scripts/sellmenu.gd" id="1_x27fk"]
[ext_resource type="Texture2D" uid="uid://ksfopsv8afvi" path="res://tilemap/plants/Basic Plants.png" id="2_yxv3o"]
[ext_resource type="Texture2D" uid="uid://bkg15sdyevp6v" path="res://tilemap/farmingTilesheetComplete.png" id="3_0iwe3"]
[ext_resource type="Texture2D" uid="uid://d2vysm72qc5ws" path="res://tilemap/Object/MonedaD.png" id="4_2o6i1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_34sq0"]
atlas = ExtResource("2_yxv3o")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4cdv"]
atlas = ExtResource("3_0iwe3")
region = Rect2(192, 65, 16, 13)

[sub_resource type="SpriteFrames" id="SpriteFrames_ti53h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_34sq0")
}],
"loop": true,
"name": &"cornseed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4cdv")
}],
"loop": true,
"name": &"randomseed",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_4x80c"]
atlas = ExtResource("3_0iwe3")
region = Rect2(176, 84, 11, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_s0bo7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4x80c")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_yahan"]
atlas = ExtResource("3_0iwe3")
region = Rect2(176, 84, 11, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_3uror"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yahan")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_exxvr"]
atlas = ExtResource("4_2o6i1")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ws5is"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_exxvr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="sellmenu" type="StaticBody2D"]
script = ExtResource("1_x27fk")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 126.0
offset_bottom = 66.0
color = Color(0.278431, 0.243137, 0.243137, 0.184314)

[node name="icon" type="AnimatedSprite2D" parent="."]
position = Vector2(24, 22)
scale = Vector2(2.5, 2.608)
sprite_frames = SubResource("SpriteFrames_ti53h")
animation = &"cornseed"

[node name="Buttonleft" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 5.0
offset_top = 42.0
offset_right = 24.0
offset_bottom = 64.0

[node name="lefticon" type="AnimatedSprite2D" parent="."]
position = Vector2(16, 49)
rotation = 1.55607
scale = Vector2(2, 2.134)
sprite_frames = SubResource("SpriteFrames_s0bo7")

[node name="Buttonright" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 27.0
offset_top = 42.0
offset_right = 46.0
offset_bottom = 64.0

[node name="righticon" type="AnimatedSprite2D" parent="."]
position = Vector2(35, 57)
rotation = -1.57733
scale = Vector2(2, 2.245)
sprite_frames = SubResource("SpriteFrames_3uror")

[node name="pricelabel" type="RichTextLabel" parent="."]
offset_left = 56.0
offset_top = 11.0
offset_right = 96.0
offset_bottom = 35.0
text = "5
"

[node name="coinicon" type="AnimatedSprite2D" parent="."]
position = Vector2(107, 22)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_ws5is")

[node name="SellButtoncolor" type="ColorRect" parent="."]
offset_left = 56.0
offset_top = 41.0
offset_right = 116.0
offset_bottom = 60.0
color = Color(0.827451, 0.101961, 0.101961, 0.368627)

[node name="SellButton" type="Button" parent="."]
offset_left = 56.0
offset_top = 41.0
offset_right = 156.0
offset_bottom = 72.0
scale = Vector2(0.6, 0.6)
text = "Sell"

[connection signal="pressed" from="Buttonleft" to="." method="_on_buttonleft_pressed"]
[connection signal="pressed" from="Buttonright" to="." method="_on_buttonright_pressed"]
